Day-177-Sigstore-Cosign/2-unsigned-rogue-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rogue-unsigned-workload
  namespace: default
spec:
  containers:
  - name: api
    image: ttl.sh/darkangel689-rogue:1h
    command: ["/bin/sh", "-c", "echo '[MALWARE] Executing...'; sleep 3600"]
