Day-177-Sigstore-Cosign/3-signed-secure-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secure-signed-workload
  namespace: default
spec:
  containers:
  - name: api
    image: ttl.sh/darkangel689-secure:1h
    command: ["/bin/sh", "-c", "echo '[AUTHORIZED] System Online...'; sleep 3600"]
